src/test/ui/associated-types/cache/project-fn-ret-contravariant.krisskross.nll.stderr
error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-contravariant.rs:53:12
   |
LL | fn transmute<'a,'b>(x: &'a u32, y: &'b u32) -> (&'a u32, &'b u32) {
   |              -- -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
LL |    let a = bar(foo, y);
   |            ^^^^^^^^^^^ assignment requires that `'b` must outlive `'a`

error: unsatisfied lifetime constraints
  --> $DIR/project-fn-ret-contravariant.rs:54:12
   |
LL | fn transmute<'a,'b>(x: &'a u32, y: &'b u32) -> (&'a u32, &'b u32) {
   |              -- -- lifetime `'b` defined here
   |              |
   |              lifetime `'a` defined here
LL |    let a = bar(foo, y);
LL |    let b = bar(foo, x);
   |            ^^^^^^^^^^^ assignment requires that `'a` must outlive `'b`

error: aborting due to 2 previous errors

